2004-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* file-ops.cc: Include <vector> instead of <memory> for new
	definition of OCTAVE_LOCAL_BUFFER.

	* EIG.cc, EIG.h (EIG::init, EIG::symmetric_init, EIG::hermitian_init):
	New arg, calc_eigenvectors.
	* EIG.h (EIG:EIG): New optional arg, calc_eigenvectors.
	Based on patch from David Bateman <dbateman@free.fr>.

2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::assign2, Array<T>::assignN):
	For X(I) = RHS, don't restrict I to fewer elements than X.

	* Array.cc (Array<T>::assign2): Simplify indexing for X(I) = RHS case.

2004-01-22  Petter Risholm  <risholm@stud.ntnu.no>

	* mx-inlines.cc	(MX_ND_REDUCTION, MX_ND_CUMULATIVE_OP):
	Simplify calculation of number of elements in retval.

	* Array.cc (Array<T>::assignN): Eliminate unnecessray code for
	filling when RHS is scalar and dimension lengths agree.

2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (distclean): Remove mx-ops.h, $(MX_OP_INC),
	$(VX_OP_INC), $(MX_OP_SRC), $(VX_OP_SRC), and $(OPTS_INC).

2004-01-22  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.cc (Array<T>::resize_and_fill): Correctly copy old elements.
	(Array<T>::assign2): Check for RHS dimensions larger than 2.

2004-01-21  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.h (Array<T>::chop_trailing_singletons): New function.
	* Array.cc (Array<T>::assignN): Use it on LHS.

	* Array.cc (Array<T>::assignN): Fix incorrectly nested if statement.
	Retrieve scalar element by passin 0 instead of an index array.
	Check for singleton dimensions where RHS is matrix or higher dimension.
	Make sure index is in bounds.

2004-01-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-ieee.cc (octave_ieee_init): Ensure that octave_Inf,
	octave_NaN, and octav_NA values are always initialized.  Check
	floating point format, not HAVE_ISINF, HAVE_FINITE, or HAVE_ISNAN
	to decide whether to do IEEE initialization.

2004-01-06  David Bateman  <dbateman@free.fr>
